DIY websites: a No-brainer or deceit? article publish

--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>DIY websites: a No-brainer or deceit? | Bespoke Web Dev</title>
+        <title>DIY websites: a no-brainer or deceit? | Bespoke Web Dev</title>
         <meta name="author" content="Cohen Coombs" />
         <meta name="robots" content="index, follow" />
         <link rel="shortcut icon" href="../assets/logo/logo.ico" type="image/x-icon" />
@@ -75,6 +75,7 @@
         </script>
         <style>
             @import url("https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
             body {
                 background-color: hsl(32, 56%, 4%);
@@ -88,9 +89,11 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                text-align: center;
                 color: white;
                 font-size: 2rem;
                 font-family: "Taviraj", sans-serif;
+                padding: 0 2rem;
             }
             .hero::before {
                 content: "";
@@ -110,6 +113,8 @@
             .article {
                 font-family: "Taviraj", sans-serif;
                 padding: 1rem 6rem 10rem 6rem;
+                max-width: 1100px;
+                margin: 0 auto;
             }
             .article .meta {
                 filter: brightness(0.6);
@@ -125,10 +130,31 @@
                 font-size: 3rem;
             }
             .article p {
-                font-size: 1.3rem;
+                font-size: 1.4rem;
+                letter-spacing: 0.01rem;
                 line-height: 2;
                 margin: 2rem 0;
                 font-weight: 300;
+            }
+            .article img {
+                width: 100%;
+                margin: 1rem 0;
+            }
+
+            .popout {
+                margin: 5rem 0;
+                border-radius: 1rem;
+                background: rgba(255, 255, 255, 0.03);
+                padding: 1rem 1rem 2px 1rem;
+                font-family: "Montserrat", sans-serif;
+            }
+            .cta {
+                font-size: 1.25rem;
+                font-weight: 400;
+                background: linear-gradient(45deg, #ffae00, #ff00d9);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                background-clip: text;
             }
         </style>
     </head>
@@ -145,7 +171,7 @@
         </nav>
 
         <div class="hero">
-            <h1 style="font-weight: 500;">DIY websites: a No-brainer or deceit?</h1>
+            <h1 style="font-weight: 500;">DIY websites: a no-brainer or deceit?</h1>
         </div>
 
         <div class="article">
@@ -159,64 +185,154 @@
             <h1>Is the tempting Do-It-Yourself option the catalyst for hassle down the track?</h1>
 
             <p>
-                <i
-                    >In life, there are many options that may entice you, the irresistible urge to
-                    take the easy route, the quick fix, the instant gratification. The forbidden
-                    fruit.
+                <i>
+                    In life, we're often drawn to the path of least resistance. It's tempting,
+                    sometimes a deceptive illusion, just like the forbidden fruit.
                 </i>
             </p>
 
             <p>
-                But as an emerging business owner, building a website yourself with simple drag and
-                drop, instant templates, all at low costs, sometimes free even, may seem like the
-                most logical choice. Why wouldn't you?
+                As a new business owner, creating your own website with easy drag-n-drop tools and
+                ready-made templates, often at little-to-no cost can seem like the smartest move.
+                Why wouldn't you go for it?
             </p>
 
-            <p>Who am I to tell you, you shouldn't?</p>
+            <p style="margin: 2rem 3rem;">Who am I to tell you otherwise?</p>
 
             <p>
-                Here's the truth you don't want to hear. It's not all that simple. The time and
-                effort you put into building your own website can ultimately build up to a lot of
-                time and money wasted.
-            </p>
-
-            <p>
-                Albeit, you may stumble across web designing AI tools that take all the hassle from
-                you, and do the work for you... Cheap AI labour, and just about instant. What else
-                could you ask for?
+                Albeit, you may stumble across AI web designing tools that take the work & hassle
+                off your hands... Cheap AI labour, done within seconds. What else could you ask for?
             </p>
 
             <p>
-                But here's the thing, if you're goal is to reach far beyond your local suburb, your
-                city, even Australia, you can shoot that goal behind the barn and bury it. You're
-                not going to get there with a DIY website.
+                But here's the thing. Your dream is to reach
+                <b><i>FAR beyond just your local community. </i></b>
+                You want your work to be seen many more times, to help more people, to leave a long
+                lasting impact.
+            </p>
+
+            <h1 style="font-size: 1.8rem;">
+                DIY websites? AI-generated work? –– You might as well shoot yourself in the foot;
+                you'd be stifling your potential.
+            </h1>
+
+            <p>
+                AI-generated or drag & drop template websites can appear polished and professional,
+                however, they typically fall short in one crucial area:
+                <a href="https://developers.google.com/search/docs/fundamentals/seo-starter-guide">
+                    Search Engine Optimization (SEO) </a
+                >. It's one overlooked area that tends to hold the door shut on new businesses
+                trying to get their foot in the door. If all businesses are going with the status
+                quo; the easy option, how will you stand out? Generated websites lacks the nuanced
+                optimization that Google's algorithms favor.
             </p>
 
             <p>
-                Although AI generated websites look surreal, behind the scenes, they are not built
-                with conventional Google Search Engine optimized code. The advantage to a bespoke
-                website is that they are created by code, optimized for search engines.
+                <i>
+                    Escalating your business to stand out from the crowd demands sacrifice. Status
+                    quo only requires compliance.</i
+                >
+            </p>
+
+            <img
+                src="assets/bwd.jpeg"
+                alt="Bespoke Website Development, the key to online success"
+            />
+
+            <p>
+                By sacrifice, it's not some insurmountable task. It's just putting aside some time
+                to provide a web-developer with quality text, high-resolution images of your work
+                and important details or visions about your business.
             </p>
 
             <p>
-                Consider these AI & DIY website platform just chucking an image onto your website
-                and calling it a day.
+                A Bespoke Web Developer will ensure your business is accurately reflected in the
+                digital space, setting you out from the crowd.
             </p>
 
             <p>
-                So then how will Google read your website, and effectively rank it, if it's all just
-                a single image, without optimized code?
+                A Bespoke Web Developer understands how to write code that search engines love. It's
+                a form of art; often gone unnoticed on surface level. It's using the right keywords,
+                optimizing load times, ensuring mobile responsiveness, and adhering to the latest
+                SEO guidelines. <i>A large job that AI can't handle.</i>
+            </p>
+
+            <br />
+
+            <h1>
+                Your time is precious.
+            </h1>
+
+            <p>
+                You're already working hard enough to get your business up & running. Don't let
+                something that should be our job cloud your specialties.
+            </p>
+
+            <img src="assets/chart.png" alt="Bespoke Website Development vs. DIY cost and time" />
+
+            <p>
+                Sure DIY website options offer lower up-front costs, perhaps even quick set-up time.
+                However, you'll soon find that the time you spend adjusting, maintaining, and even
+                the costs from monthly subscriptions or hosting plans illusively add up in the long
+                run.
+            </p>
+
+            <p>It's meant to be deceptive; that's why you're drawn to it.</p>
+
+            <p>
+                It's time you lose that could've been spent focusing on your business and serving
+                your customers.
             </p>
 
             <p>
-                Bespoke websites are built with the intention of being found on Google, and other
-                search engines. They are built with the intention of being found by your target
-                audience. This is using the right keywords, and the right code to be found by the
-                right people.
+                And... Don't let a Do-It-Yourself website go into your personal life, while you try
+                absorb the time you've lost.
+                <i
+                    >Balance your time with your family –– not sitting and pondering over a
+                    website!</i
+                >
             </p>
 
-            <canvas id="costTimeChart" width="400" height="120"></canvas>
-            <script>
+            <img src="assets/cons.png" alt="Cons of DIY websites" />
+
+            <p>
+                The choice is yours. The path of least resistance, or the path that leads to
+                success.
+            </p>
+
+            <p>
+                Unlike the deceptive DIY deals that seem great initially, you soon wear the cost
+                over time. Fortunately, <a href="./">Bespoke Web Dev</a> offers full website
+                development with no ongoing fees. You only pay for additional revisions to your
+                website. <i>That's something we can't hide from you.</i>
+            </p>
+
+            <div class="popout">
+                <h3 style="font-size: 3rem;" class="cta">
+                    Get a FREE Website Mockup designed for your business.
+                </h3>
+                <p>
+                    <b>Reach out, tell us about your business.</b>
+                    Satisfied with the sample? We'll work together to tailor and launch it for
+                    success.
+                    <br />
+                    <br />
+                    <a href="mailto:cohencoombs@outlook.com">
+                        <button>Let's Talk</button>
+                    </a>
+                </p>
+            </div>
+
+            <h1 style="font-size: 2rem;">
+                Unlock your online potential with a jaw-dropping bespoke web presence that turns
+                heads & drives popularity.
+            </h1>
+
+            <p>
+                <i>Reach out to <a href="./">Bespoke Web Dev</a> today!</i>
+            </p>
+            <!-- <canvas id="costTimeChart" width="400" height="120"></canvas> -->
+            <!-- <script>
                 var ctx = document.getElementById("costTimeChart").getContext("2d")
                 var costTimeChart = new Chart(ctx, {
                     type: "line",
@@ -254,14 +370,130 @@
                         },
                     },
                 })
-            </script>
+            </script> -->
 
-            <p hidden>
+            <!-- <p hidden>
                 I chose the Adam and eve linkage, as it goes back to the oldest example of
                 temptation to the easiest choice...
-            </p>
+            </p> -->
         </div>
 
-        <script src="https://login.bespokewebdev.com/cms.js"></script>
+        <footer style="margin-bottom: 0;">
+            <div>
+                <h3>
+                    Contact Us
+                </h3>
+                <a
+                    style="font-size: 1.1rem; font-weight: 500;"
+                    href="mailto:cohencoombs@outlook.com"
+                >
+                    cohencoombs@outlook.com
+                </a>
+
+                <div class="socials">
+                    <a
+                        class="social"
+                        target="_blank"
+                        href="https://www.facebook.com/profile.php?id=100093077884327"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.8"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                        >
+                            <path
+                                d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+                            ></path>
+                        </svg>
+                        <span>Facebook</span>
+                    </a>
+                    <a
+                        class="social"
+                        target="_blank"
+                        href="https://www.instagram.com/bespokewebdev"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.8"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                        >
+                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                        </svg>
+                        <span>Instagram</span>
+                    </a>
+                    <a
+                        class="social"
+                        target="_blank"
+                        href="https://www.linkedin.com/company/bespokewebdev"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.8"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                        >
+                            <path
+                                d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+                            ></path>
+                            <rect x="2" y="9" width="4" height="12"></rect>
+                            <circle cx="4" cy="4" r="2"></circle>
+                        </svg>
+                        <span>LinkedIn</span>
+                    </a>
+                </div>
+
+                <hr />
+
+                <div>
+                    <h3>Client Login</h3>
+                    <div class="links">
+                        <a target="_blank" href="cms/index.html">Content Management System</a>
+                        <a target="_blank" href="https://login.bespokewebdev.com">Login</a>
+                    </div>
+                </div>
+
+                <hr />
+
+                <div class="links">
+                    <a href="pages/from-leads-to-sales.html">From Leads to Sales</a>
+                    <a href="pages/services.html">Our Services</a>
+                    <a href="pages/benefits.html">Your Benefits</a>
+                    <a href="pages/ecommerce.html">E-Commerce Integration</a>
+                    <a href="pages/operation.html">Getting Started</a>
+                    <a href="pages/faq.html">FAQ</a>
+                    <a href="pages/disclaimer.html">Disclaimer</a>
+                    <a href="sitemap.html">Sitemap</a>
+                </div>
+            </div>
+            <p class="copyright">
+                <span>Bespoke Web Dev © <span id="copyright"></span>. All rights reserved.</span>
+                <span>ABN: 43 464 545 840</span>
+            </p>
+        </footer>
+
+        <script>
+            document.getElementById("copyright").innerText = new Date().getFullYear()
+        </script>
+
+        <!-- <script src="https://login.bespokewebdev.com/cms.js"></script> -->
     </body>
 </html>
