--- a/sitemap.html
+++ b/sitemap.html
@@ -22,6 +22,7 @@
 <li><a href="https://bespokewebdev.com/pages/ecommerce.html">How we handle e-commerce integration with Stripe | Bespoke Web Dev</a></li>
 <li><a href="https://bespokewebdev.com/pages/operation.html">Let's Bring Your Vision to Life: What We Need From You | Bespoke Web Dev</a></li>
 <li><a href="https://bespokewebdev.com/pages/faq.html">Frequently Asked Questions | Bespoke Web Dev</a></li>
+<li><a href="https://bespokewebdev.com/pages/diy-or-bespoke.html">DIY websites: a no-brainer or deceit?	| Bespoke Web Dev</a></li>
 <li class="collapsed_item"><a href="https://bespokewebdev.com/pages/disclaimer.html">Disclaimer | Bespoke Web Dev</a></li>
 <li class="expand_items"><a href="#"> &#x25BC; </a></li>
 </ul>
