DIY websites: a No-brainer or deceit? article publish

--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -17,36 +17,36 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Unlock your online potential with a jaw-dropping bespoke web presence that turns heads & drives popularity."
+            content="Is the tempting Do-It-Yourself option the catalyst for hassle down the track?"
         />
         <meta
             name="keywords"
-            content="web, website, web design, web development, web creation, build website, website design, website development, website design adelaide, website development adelaide, web design adelaide, web designer, website designer, adelaide, ecommerce, ecommerce development adelaide, digital marketing, seo, seo adelaide, adelaide web design, adelaide website design, graphic design, website adelaide"
+            content="diy website, diy, bespoke, diy or web developer, web, website, web design, web development, web creation, build website, website design, website development, website design adelaide, website development adelaide, web design adelaide, web designer, website designer, adelaide, ecommerce, ecommerce development adelaide, digital marketing, seo, seo adelaide, adelaide web design, adelaide website design, graphic design, website adelaide"
         />
         <link
             rel="stylesheet"
             defer
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,500,0,0"
         />
-        <meta property="og:title" content="Bespoke Web Design & Development Adelaide" />
+        <meta property="og:title" content="DIY websites: a no-brainer or deceit?" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://bespokewebdev.com/" />
-        <meta property="og:image" content="https://bespokewebdev.com/assets/banner.png" />
+        <meta property="og:image" content="https://bespokewebdev.com/pages/assets/bwd.webp" />
         <meta
             property="og:description"
-            content="Unlock your online potential with a jaw-dropping bespoke web presence that turns heads & drives popularity."
+            content="Is the tempting Do-It-Yourself option the catalyst for hassle down the track?"
         />
         <meta property="og:site_name" content="Bespoke Web Dev" />
         <meta property="og:locale" content="en_AU" />
         <meta property="og:article:author" content="Bespoke Web Dev" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Bespoke Web Design & Development Adelaide" />
-        <meta name="twitter:image" content="https://bespokewebdev.com/assets/banner.png" />
+        <meta name="twitter:title" content="DIY websites: a no-brainer or deceit?" />
+        <meta name="twitter:image" content="https://bespokewebdev.com/pages/assets/bwd.webp" />
         <meta
             name="twitter:description"
-            content="Unlock your online potential with a jaw-dropping bespoke web presence that turns heads & drives popularity."
+            content="Is the tempting Do-It-Yourself option the catalyst for hassle down the track?"
         />
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
@@ -102,7 +102,7 @@
                 left: 0;
                 height: 60vh;
                 width: 100%;
-                background-image: url(assets/eve.png);
+                background-image: url(assets/eve.webp);
                 background-size: cover;
                 background-position: center;
                 z-index: -1;
@@ -139,6 +139,9 @@
             .article img {
                 width: 100%;
                 margin: 1rem 0;
+            }
+            .article a {
+                color: #ffc953;
             }
 
             .popout {
@@ -181,7 +184,6 @@
                 By Cohen Coombs, Bespoke Web Dev
             </div>
 
-            <!-- <h1>Are DIY websites the forbidden fruit for hassle down the track?</h1> -->
             <h1>Is the tempting Do-It-Yourself option the catalyst for hassle down the track?</h1>
 
             <p>
@@ -235,7 +237,7 @@
             </p>
 
             <img
-                src="assets/bwd.jpeg"
+                src="assets/bwd.webp"
                 alt="Bespoke Website Development, the key to online success"
             />
 
@@ -268,7 +270,7 @@
                 something that should be our job cloud your specialties.
             </p>
 
-            <img src="assets/chart.png" alt="Bespoke Website Development vs. DIY cost and time" />
+            <img src="assets/chart.webp" alt="Bespoke Website Development vs. DIY cost and time" />
 
             <p>
                 Sure DIY website options offer lower up-front costs, perhaps even quick set-up time.
@@ -285,7 +287,7 @@
             </p>
 
             <p>
-                And... Don't let a Do-It-Yourself website go into your personal life, while you try
+                And... Don't let a Do-It-Yourself website get into your personal life, while you try
                 absorb the time you've lost.
                 <i
                     >Balance your time with your family –– not sitting and pondering over a
@@ -293,7 +295,7 @@
                 >
             </p>
 
-            <img src="assets/cons.png" alt="Cons of DIY websites" />
+            <img src="assets/cons.webp" alt="Cons of DIY websites" />
 
             <p>
                 The choice is yours. The path of least resistance, or the path that leads to
@@ -302,15 +304,15 @@
 
             <p>
                 Unlike the deceptive DIY deals that seem great initially, you soon wear the cost
-                over time. Fortunately, <a href="./">Bespoke Web Dev</a> offers full website
+                over time. Fortunately, <a href="/">Bespoke Web Dev</a> offers full website
                 development with no ongoing fees. You only pay for additional revisions to your
                 website. <i>That's something we can't hide from you.</i>
             </p>
 
             <div class="popout">
-                <h3 style="font-size: 3rem;" class="cta">
+                <h1 style="font-size: 3rem;" class="cta">
                     Get a FREE Website Mockup designed for your business.
-                </h3>
+                </h1>
                 <p>
                     <b>Reach out, tell us about your business.</b>
                     Satisfied with the sample? We'll work together to tailor and launch it for
@@ -323,59 +325,14 @@
                 </p>
             </div>
 
-            <h1 style="font-size: 2rem;">
+            <h2 style="font-size: 2rem; font-weight: 300;">
                 Unlock your online potential with a jaw-dropping bespoke web presence that turns
                 heads & drives popularity.
-            </h1>
+            </h2>
 
             <p>
-                <i>Reach out to <a href="./">Bespoke Web Dev</a> today!</i>
+                <i>Reach out to <a href="/">Bespoke Web Dev</a> today!</i>
             </p>
-            <!-- <canvas id="costTimeChart" width="400" height="120"></canvas> -->
-            <!-- <script>
-                var ctx = document.getElementById("costTimeChart").getContext("2d")
-                var costTimeChart = new Chart(ctx, {
-                    type: "line",
-                    data: {
-                        labels: ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10"],
-                        datasets: [
-                            {
-                                label: "DIY Website",
-                                borderColor: "red",
-                                data: [0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100],
-                                fill: false,
-                            },
-                            {
-                                label: "Bespoke Website",
-                                borderColor: "blue",
-                                data: [50, 25, 5, 0, 0, 0, 0, 0, 0, 0, 0],
-                                fill: false,
-                            },
-                        ],
-                    },
-                    options: {
-                        scales: {
-                            x: {
-                                title: {
-                                    display: true,
-                                    text: "Cost per Change/Management",
-                                },
-                            },
-                            y: {
-                                title: {
-                                    display: true,
-                                    text: "Time",
-                                },
-                            },
-                        },
-                    },
-                })
-            </script> -->
-
-            <!-- <p hidden>
-                I chose the Adam and eve linkage, as it goes back to the oldest example of
-                temptation to the easiest choice...
-            </p> -->
         </div>
 
         <footer style="margin-bottom: 0;">
@@ -466,7 +423,7 @@
                 <div>
                     <h3>Client Login</h3>
                     <div class="links">
-                        <a target="_blank" href="cms/index.html">Content Management System</a>
+                        <a target="_blank" href="/cms/index.html">Content Management System</a>
                         <a target="_blank" href="https://login.bespokewebdev.com">Login</a>
                     </div>
                 </div>
@@ -474,14 +431,14 @@
                 <hr />
 
                 <div class="links">
-                    <a href="pages/from-leads-to-sales.html">From Leads to Sales</a>
-                    <a href="pages/services.html">Our Services</a>
-                    <a href="pages/benefits.html">Your Benefits</a>
-                    <a href="pages/ecommerce.html">E-Commerce Integration</a>
-                    <a href="pages/operation.html">Getting Started</a>
-                    <a href="pages/faq.html">FAQ</a>
-                    <a href="pages/disclaimer.html">Disclaimer</a>
-                    <a href="sitemap.html">Sitemap</a>
+                    <a href="/pages/from-leads-to-sales.html">From Leads to Sales</a>
+                    <a href="/pages/services.html">Our Services</a>
+                    <a href="/pages/benefits.html">Your Benefits</a>
+                    <a href="/pages/ecommerce.html">E-Commerce Integration</a>
+                    <a href="/pages/operation.html">Getting Started</a>
+                    <a href="/pages/faq.html">FAQ</a>
+                    <a href="/pages/disclaimer.html">Disclaimer</a>
+                    <a href="/sitemap.html">Sitemap</a>
                 </div>
             </div>
             <p class="copyright">
