DIY websites: a No-brainer or deceit? article publish

--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -142,8 +142,8 @@
             }
             .article a {
                 color: #ffc953;
+                text-decoration: underline;
             }
-
             .popout {
                 margin: 5rem 0;
                 border-radius: 1rem;
@@ -242,18 +242,18 @@
             />
 
             <p>
-                By sacrifice, it's not some insurmountable task. It's just putting aside some time
-                to provide a web-developer with quality text, high-resolution images of your work
-                and important details or visions about your business.
+                By sacrifice, it's not some insurmountable task. You will just need to prepare some
+                time to provide a web developer with quality text, high-resolution images of your
+                work and important details or visions about your business.
             </p>
 
             <p>
-                A Bespoke Web Developer will ensure your business is accurately reflected in the
+                A bespoke web developer will ensure your business is accurately reflected in the
                 digital space, setting you out from the crowd.
             </p>
 
             <p>
-                A Bespoke Web Developer understands how to write code that search engines love. It's
+                A bespoke web developer understands how to write code that search engines love. It's
                 a form of art; often gone unnoticed on surface level. It's using the right keywords,
                 optimizing load times, ensuring mobile responsiveness, and adhering to the latest
                 SEO guidelines. <i>A large job that AI can't handle.</i>
@@ -273,7 +273,7 @@
             <img src="assets/chart.webp" alt="Bespoke Website Development vs. DIY cost and time" />
 
             <p>
-                Sure DIY website options offer lower up-front costs, perhaps even quick set-up time.
+                Sure DIY options offer lower up-front costs, perhaps even quick set-up time.
                 However, you'll soon find that the time you spend adjusting, maintaining, and even
                 the costs from monthly subscriptions or hosting plans illusively add up in the long
                 run.
