Update DIY websites page & SEO

--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -275,9 +275,8 @@
 
             <p>
                 Sure DIY options offer lower up-front costs, perhaps even quick set-up time.
-                However, you'll soon find that the time you spend adjusting, maintaining, and even
-                the costs from monthly subscriptions or hosting plans illusively add up in the long
-                run.
+                However, you'll soon find that the time you spend adjusting, maintaining, and the
+                costs from monthly subscriptions or hosting plans illusively add up in the long run.
             </p>
 
             <p>It's meant to be deceptive; that's why you're drawn to it.</p>
@@ -299,10 +298,10 @@
             <img src="assets/cons.webp" alt="Cons of DIY websites" />
 
             <p>
-                Unlike deceptive DIY deals that seem great initially (but make you wear the cost
-                over time), <a href="/">Bespoke Web Dev</a> offers full website development,
-                tailored to your business, with <u>no ongoing fees</u>. You only pay for additional
-                revisions to your website.
+                Unlike deceptive DIY deals that seem great initially, but make you wear the cost
+                over time, <a href="/">Bespoke Web Dev</a> offers full website development, tailored
+                to your business, with <u>no ongoing fees</u>. You only pay for additional revisions
+                to your website.
             </p>
 
             <p>
