Update DIY websites page & SEO

--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -274,9 +274,10 @@
             <img src="assets/chart.webp" alt="Bespoke Website Development vs. DIY cost and time" />
 
             <p>
-                Sure DIY options offer lower up-front costs, perhaps even quick set-up time.
-                However, you'll soon find that the time you spend adjusting, maintaining, and the
-                costs from monthly subscriptions or hosting plans illusively add up in the long run.
+                Sure DIY options have their merit in lower up-front costs, perhaps even quick set-up
+                time. However, you'll soon find that the time and costs you spend in adjusting,
+                maintaining, on top of monthly subscriptions and hosting plans illusively add up in
+                the long run.
             </p>
 
             <p>It's meant to be deceptive; that's why you're drawn to it.</p>
