--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -275,12 +275,10 @@
 
             <p>
                 Sure DIY options have their merit in lower up-front costs, perhaps even quick set-up
-                time. However, you'll soon find that the time and costs you spend in adjusting,
-                maintaining, on top of monthly subscriptions and hosting plans illusively add up in
-                the long run.
+                time. However, you'll soon find that the time and costs you spend in adjustments and
+                maintenance, on top of monthly subscriptions and hosting plans will illusively add
+                up in the long run.
             </p>
-
-            <p>It's meant to be deceptive; that's why you're drawn to it.</p>
 
             <p>
                 It's time you lose that could've been spent focusing on your business and serving
