bwd article minor wording change

--- a/pages/diy-or-bespoke.html
+++ b/pages/diy-or-bespoke.html
@@ -298,9 +298,10 @@
 
             <p>
                 Unlike deceptive DIY deals that seem great initially, but make you wear the cost
-                over time, <a href="/">Bespoke Web Dev</a> offers full website development, tailored
-                to your business, with <u>no ongoing fees</u>. You only pay for additional revisions
-                to your website.
+                over time, <a href="/">Bespoke Web Dev</a> offers
+                <a href="services.html">full website development</a>, tailored to your business,
+                with <i style="font-weight: 500;">no ongoing fees</i>. You only pay for additional
+                revisions to your website.
             </p>
 
             <p>
